# DigitalSigner

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml  ci.yml  release.yml
include/: HashUtils.h  KeyManager.h  MainWindow.h  SecureMemory.h  Signer.h  Verifier.h
src/: HashUtils.cpp  KeyManager.cpp  MainWindow.cpp  Signer.cpp  Verifier.cpp  main.cpp
tests/: test_HashUtils.cpp
